增加赞助 和 版本检查 相关功能
